--- a/index.html
+++ b/index.html
@@ -1,99 +1,181 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>メディマインドエネルギー整体｜心と体を整えるヒーリング整体</title>
-  <meta name="description" content="メディマインドエネルギー整体は、心と体を整えるエネルギー整体です。レンタルスペースにて完全予約制で施術いたします。">
-  <style>
-    body { font-family: "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif; margin: 0; line-height: 1.7; }
-    header { background: url('https://source.unsplash.com/1600x600/?relax,therapy') no-repeat center/cover; color: white; text-align: center; padding: 80px 20px; }
-    header h1 { font-size: 2em; margin: 0; }
-    header p { font-size: 1.2em; margin-top: 10px; }
-    section { padding: 60px 20px; max-width: 900px; margin: auto; }
-    section h2 { font-size: 1.6em; margin-bottom: 20px; text-align: center; }
-    .features { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
-    .feature { flex: 1 1 250px; border: 1px solid #ddd; padding: 20px; border-radius: 6px; background: #fafafa; }
-    .menu ul { list-style: none; padding: 0; }
-    .menu li { padding: 10px 0; border-bottom: 1px solid #eee; }
-    iframe { width: 100%; border: none; }
-    footer { background: #333; color: #fff; text-align: center; padding: 20px; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>メディマインドエネルギー整体</title>
+<style>
+body {margin:0;font-family:"Helvetica",sans-serif;background-color:#E8F6E8;color:#333;}
+.header{background-color:#D0F0C0;padding:40px 20px;text-align:center;}
+.header h1{margin:0;font-size:2em;}
+.main{background-color:#FDF6E3;padding:40px 20px;}
+.main h2{text-align:center;margin-bottom:20px;}
+.btn{display:inline-block;background-color:#A8DADC;color:#fff;padding:12px 24px;text-decoration:none;border-radius:12px;transition:0.3s;}
+.btn:hover{background-color:#457B9D;}
+.section2{background-color:#F3E8F6;padding:40px 20px;}
+.section3{background-color:#FFF8E7;padding:40px 20px;}
+.footer{background-color:#FFF8E7;padding:20px;text-align:center;font-size:0.9em;}
+a{color:#457B9D;text-decoration:none;border-radius:8px;padding:4px 8px;}
+a:hover{background-color:#A8DADC;color:#fff;}
+form{max-width:400px;margin:0 auto;display:flex;flex-direction:column;gap:12px;}
+input, select, textarea, button{font-size:1em;border-radius:8px;padding:10px;box-sizing:border-box;}
+input, select, textarea{border:1px solid #ccc;width:100%;}
+button{background-color:#A8DADC;color:#fff;border:none;padding:12px;cursor:pointer;transition:0.3s;}
+button:hover{background-color:#457B9D;}
+.calendar {max-width:400px;margin:20px auto 40px auto;display:grid;grid-template-columns:repeat(7,1fr);gap:4px;text-align:center;}
+.calendar div{padding:10px;border-radius:8px;cursor:pointer;transition:0.3s;}
+.calendar .available{background-color:#E0F2F1;}
+.calendar .available:hover{background-color:#A8DADC;color:#fff;}
+.calendar .selected{background-color:#457B9D;color:#fff;}
+.calendar .unavailable{background-color:#ccc;cursor:not-allowed;color:#666;}
+.calendar-nav{display:flex;justify-content:space-between;max-width:400px;margin:10px auto;font-weight:bold;}
+</style>
 </head>
 <body>
 
-<header>
+<div class="header">
   <h1>メディマインドエネルギー整体</h1>
-  <p>心と体を整えるヒーリング整体｜完全予約制</p>
-</header>
+  <p>心と体のバランスを整える癒しの整体</p>
+</div>
 
-<section>
-  <h2>当院について</h2>
-  <p>
-    メディマインドエネルギー整体は、心と体のバランスを整えるためのエネルギー整体です。<br>
-    肉体的なコリや疲れだけでなく、ストレスや感情の滞り、エネルギーの乱れにもアプローチ。<br>
-    深いリラックスと自己回復力の活性化を促します。施術は静かなレンタルスペースにて行います。
-  </p>
-</section>
+<div class="main">
+  <h2>施術内容</h2>
+  <p>エネルギー整体で心身のリラックスをサポートします。</p>
+  <a href="#contact" class="btn">ご予約はこちら</a>
+</div>
 
-<section>
-  <h2>特徴</h2>
-  <div class="features">
-    <div class="feature">
-      <h3>完全予約制</h3>
-      <p>落ち着いた空間で、マンツーマンの施術を行います。</p>
-    </div>
-    <div class="feature">
-      <h3>レンタルスペース施術</h3>
-      <p>清潔で静かなレンタルスペースを利用し、安心して施術を受けていただけます。</p>
-    </div>
-    <div class="feature">
-      <h3>心身のトータルケア</h3>
-      <p>身体の不調だけでなく、心のバランスにも働きかけます。</p>
-    </div>
-  </div>
-</section>
+<div class="section2 contact" id="contact">
+  <h2>お問い合わせ</h2>
+  <p>電話番号: <a href="tel:08018909043">080-1890-9043</a></p>
+  <p>メールアドレス: <a href="mailto:clayry_touch@yahoo.co.jp">clayry_touch@yahoo.co.jp</a></p>
+</div>
 
-<section class="menu">
-  <h2>施術メニュー</h2>
-  <ul>
-    <li>エネルギー整体（60分） … 7,000円（税込）</li>
-    <li>エネルギー整体（90分） … 10,000円（税込）</li>
-    <li>エネルギー整体＋カウンセリング（120分） … 13,000円（税込）</li>
-    <li>※初回は＋15分カウンセリング無料</li>
-  </ul>
-</section>
-
-<section>
+<div class="section3">
   <h2>空き状況カレンダー</h2>
-  <!-- Googleカレンダー埋め込みコードをここに貼る -->
-  <iframe src="https://calendar.google.com/calendar/embed?src=あなたのカレンダーID&ctz=Asia%2FTokyo&mode=MONTH" 
-    style="height:600px;"></iframe>
-</section>
+  <div class="calendar-nav">
+    <button id="prevMonth">&lt; 前月</button>
+    <div id="monthYear"></div>
+    <button id="nextMonth">次月 &gt;</button>
+  </div>
+  <div class="calendar" id="calendar"></div>
 
-<section>
-  <h2>ご予約フォーム</h2>
-  <!-- Googleフォームの埋め込みコードをここに貼る -->
-  <iframe src="https://docs.google.com/forms/d/e/フォームのID/viewform?embedded=true" 
-    height="600">読み込んでいます…</iframe>
-</section>
+  <h2>予約フォーム</h2>
+  <form id="reservation-form">
+    <input type="text" name="name" placeholder="お名前" required>
+    <input type="tel" name="tel" placeholder="電話番号" required>
+    <input type="email" name="email" placeholder="メールアドレス" required>
+    <input type="text" name="date" id="selected-date" placeholder="希望日" readonly required>
+    <textarea name="message" placeholder="ご要望・メッセージ" rows="4"></textarea>
+    <button type="submit">送信</button>
+  </form>
+  <p id="form-message" style="text-align:center;color:green;"></p>
+</div>
 
-<section>
-  <h2>アクセス</h2>
-  <p>
-    施術場所：東京都○○区△△町1-2-3<br>
-    （○○レンタルスペース内）<br>
-    営業時間：10:00〜20:00（不定休）<br>
-    電話予約：090-1234-5678
-  </p>
-  <!-- Googleマップ埋め込み -->
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!...省略..." 
-    height="300"></iframe>
-</section>
+<div class="footer">
+  <p>&copy; 2025 メディマインドエネルギー整体</p>
+</div>
 
-<footer>
-  <p>© 2025 メディマインドエネルギー整体 All Rights Reserved.</p>
-</footer>
+<script>
+// Google Sheets APIのURL（Apps Scriptで作成したもの）
+const apiGetUrl = "https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec?action=get";
+const apiPostUrl = "https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec?action=post";
+
+const calendarEl = document.getElementById('calendar');
+const monthYearEl = document.getElementById('monthYear');
+const prevBtn = document.getElementById('prevMonth');
+const nextBtn = document.getElementById('nextMonth');
+const selectedInput = document.getElementById('selected-date');
+const form = document.getElementById('reservation-form');
+const formMessage = document.getElementById('form-message');
+
+let today = new Date();
+let currentMonth = today.getMonth();
+let currentYear = today.getFullYear();
+let bookedDates = {}; // { "2025-10": [5,12,18], ... } を取得
+
+async function fetchBookedDates(){
+  try{
+    const res = await fetch(apiGetUrl);
+    const data = await res.json();
+    bookedDates = data; // {"2025-10":[5,12,18],...}
+    renderCalendar(currentMonth,currentYear);
+  }catch(err){
+    console.error("予約データ取得エラー",err);
+  }
+}
+
+function renderCalendar(month, year){
+  calendarEl.innerHTML = "";
+  const firstDay = new Date(year,month,1).getDay();
+  const daysInMonth = new Date(year,month+1,0).getDate();
+  const monthKey = `${year}-${(month+1).toString().padStart(2,'0')}`;
+  const booked = bookedDates[monthKey] || [];
+
+  monthYearEl.textContent = `${year}年 ${month+1}月`;
+
+  for(let i=0;i<firstDay;i++){
+    calendarEl.appendChild(document.createElement('div'));
+  }
+
+  for(let i=1;i<=daysInMonth;i++){
+    const day = document.createElement('div');
+    day.textContent = i;
+    const dateObj = new Date(year,month,i);
+    const isPast = dateObj < new Date(today.getFullYear(), today.getMonth(), today.getDate());
+    if(isPast || booked.includes(i)){
+      day.classList.add('unavailable');
+    } else {
+      day.classList.add('available');
+      day.addEventListener('click',()=>{
+        document.querySelectorAll('.calendar div').forEach(d=>d.classList.remove('selected'));
+        day.classList.add('selected');
+        selectedInput.value = `${year}-${(month+1).toString().padStart(2,'0')}-${i.toString().padStart(2,'0')}`;
+      });
+    }
+    calendarEl.appendChild(day);
+  }
+}
+
+prevBtn.addEventListener('click', ()=>{
+  currentMonth--;
+  if(currentMonth <0){currentMonth=11; currentYear--;}
+  renderCalendar(currentMonth,currentYear);
+});
+nextBtn.addEventListener('click', ()=>{
+  currentMonth++;
+  if(currentMonth>11){currentMonth=0; currentYear++;}
+  renderCalendar(currentMonth,currentYear);
+});
+
+// フォーム送信
+form.addEventListener('submit', async (e)=>{
+  e.preventDefault();
+  const formData = new FormData(form);
+  const payload = Object.fromEntries(formData.entries());
+
+  try{
+    const res = await fetch(apiPostUrl,{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body: JSON.stringify(payload)
+    });
+    const data = await res.json();
+    if(data.result==="success"){
+      formMessage.textContent="予約が送信されました！";
+      form.reset();
+      fetchBookedDates(); // 送信後にカレンダーを更新
+    }else{
+      formMessage.textContent="送信エラーです。再度お試しください。";
+    }
+  }catch(err){
+    console.error(err);
+    formMessage.textContent="送信中にエラーが発生しました。";
+  }
+});
+
+fetchBookedDates();
+</script>
 
 </body>
 </html>
