--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ iframe {width:100%; max-width:100%; border-radius:12px;}
 <!-- 画像スライダー -->
 <div class="slider">
   <div class="slides">
-    <img src="https://images.unsplash.com/photo-1612197521153-67ed1b5a6c21?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=800" alt="整体施術イメージ1">
-    <img src="https://images.unsplash.com/photo-1605902711622-cfb43c443a43?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=800" alt="整体施術イメージ2">
-    <img src="https://images.unsplash.com/photo-1588776814546-3692d0c524f6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=800" alt="リラックス施術イメージ">
+    <img src="https://images.unsplash.com/photo-1612197521153-67ed1b5a6c21?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="整体施術イメージ1">
+    <img src="https://images.unsplash.com/photo-1605902711622-cfb43c443a43?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="整体施術イメージ2">
+    <img src="https://images.unsplash.com/photo-1588776814546-3692d0c524f6?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="リラックス施術イメージ">
   </div>
 </div>
 
