--- a/index.html
+++ b/index.html
@@ -22,18 +22,6 @@ a{color:#3E6B57;text-decoration:none;border-radius:8px;padding:4px 8px;}
 a:hover{background-color:#C7E8C9;color:#fff;}
 .footer{background-color:#FFF8E7;padding:20px;text-align:center;font-size:0.9em;}
 
-/* スライダー */
-.slider {position:relative; max-width:100%; margin:auto; overflow:hidden; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
-.slides {display:flex; width:300%; animation:slide 12s infinite;}
-.slides img {width:100%; border-radius:15px;}
-@keyframes slide {
-  0% {transform:translateX(0%);}
-  25% {transform:translateX(-100%);}
-  50% {transform:translateX(-200%);}
-  75% {transform:translateX(-100%);}
-  100% {transform:translateX(0%);}
-}
-
 /* 予約フォーム */
 form{max-width:600px;margin:auto;background-color:#FDFDF7;padding:25px;border-radius:15px;box-shadow:0 4px 10px rgba(0,0,0,0.05);}
 input, textarea, select{width:100%;padding:14px;margin:10px 0;border-radius:10px;border:1px solid #ccc;}
@@ -55,18 +43,10 @@ iframe {width:100%; max-width:100%; border-radius:15px;}
 <!-- 当院の特徴 -->
 <div class="section section2">
   <h2>当院の特徴</h2>
-  <p>心と体の調和を大切にしたエネルギー整体で、日常の疲れやストレスを和らげます。<br>
-     初めての方でも安心して受けられる丁寧な施術です。<br>
-     身体の緊張をほぐし、心もリラックスできる空間を提供します。</p>
-</div>
-
-<!-- 画像スライダー -->
-<div class="slider">
-  <div class="slides">
-    <img src="slide1.jpg" alt="整体施術イメージ1">
-    <img src="slide2.jpg" alt="整体施術イメージ2">
-    <img src="slide3.jpg" alt="リラックス施術イメージ">
-  </div>
+  <p>心と体を整え、日常生活の質を向上させるための整体です。<br>
+     エネルギーの流れに注目した施術で、身体の不調やストレスを和らげます。<br>
+     初めての方でも安心して受けられる丁寧な施術です。</p>
+  <p>※施術はレンタルスペースで行います。プライベートな空間でリラックスして施術を受けていただけます。</p>
 </div>
 
 <!-- 施術メニュー -->
