--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ input[type=submit]:hover{background-color:#2F5D4E;}
 
 /* カレンダー */
 iframe {width:100%; max-width:100%; border-radius:15px;}
+
+/* FAQ */
+.faq{max-width:800px;margin:0 auto;}
+.faq-item{margin-bottom:25px;}
+.faq-item h3{font-size:1.1em;color:#2F5D4E;margin-bottom:8px;}
+.faq-item p{margin:0 0 10px 0;line-height:1.6;}
 </style>
 </head>
 <body>
@@ -46,7 +52,7 @@ iframe {width:100%; max-width:100%; border-radius:15px;}
   <p>心と体を整え、日常生活の質を向上させるための整体です。<br>
      エネルギーの流れに注目した施術で、身体の不調やストレスを和らげます。<br>
      初めての方でも安心して受けられる丁寧な施術です。</p>
-  <p>※施術はレンタルスペースで行います。プライベートな空間でリラックスして施術を受けていただけます。</p>
+  <p>※施術はレンタルスペースで行います。プライベートな空間で、リラックスして施術を受けていただけます。</p>
 </div>
 
 <!-- 施術メニュー -->
@@ -111,6 +117,37 @@ iframe {width:100%; max-width:100%; border-radius:15px;}
     <textarea name="note" rows="4" placeholder="ご希望や質問など"></textarea>
     <input type="submit" value="予約を送信">
   </form>
+</div>
+
+<!-- よくある質問 -->
+<div class="section section3">
+  <h2>よくある質問</h2>
+  <div class="faq">
+    <div class="faq-item">
+      <h3>① 予約時間の何分前に来れば良いですか？</h3>
+      <p>予約時間の5分前にレンタルスペースへお越しください。遅刻されそうな場合は必ずお電話でご連絡ください。15分以上の遅刻はキャンセル扱いになる場合があります。</p>
+    </div>
+    <div class="faq-item">
+      <h3>② キャンセル料はかかりますか？</h3>
+      <p>当日キャンセルのみ、一律3,000円を頂戴します。連絡なしの当日キャンセルは全額、かつ今後のご予約をお断りする場合があります。</p>
+    </div>
+    <div class="faq-item">
+      <h3>③ 健康保険は使えますか？</h3>
+      <p>当院の施術は民間療法です。病院・接骨院・マッサージ・鍼灸院とは異なり、健康保険は使用できません。</p>
+    </div>
+    <div class="faq-item">
+      <h3>④ どんな服装で行けば良いですか？</h3>
+      <p>施術の妨げにならない動きやすい服装であれば、そのままで大丈夫です。着替えの必要はありません。</p>
+    </div>
+    <div class="faq-item">
+      <h3>⑤ ソフトな整体とのことですが、痛くないですか？</h3>
+      <p>基本的に痛みはありません。施術の強さは効果に比例せず、ソフトな方が効果を高く感じることがあります。</p>
+    </div>
+    <div class="faq-item">
+      <h3>⑥ どのくらいの頻度で受ければ良いですか？</h3>
+      <p>初めての方は週1回、または10日に1回をおすすめします。身体は歪んだ状態を正しいと思い込むため、間隔をあけず一定期間続けて受けることで、より効果的に状態を整えられます。</p>
+    </div>
+  </div>
 </div>
 
 <!-- お問い合わせ -->
