--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@ iframe {width:100%; max-width:100%; border-radius:15px;}
   </div>
 </div>
 
+<!-- 区切り線 -->
+<div style="max-width:800px;margin:0 auto;padding:20px 0;">
+  <hr style="border:1px solid #C7E8C9;">
+</div>
+
 <!-- お問い合わせ -->
 <div class="section section3" id="contact">
   <h2>お問い合わせ</h2>
