--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 <style>
 body {margin:0;font-family:"Hiragino Kaku Gothic Pro","Helvetica",sans-serif;background-color:#F0FFF4;color:#333;}
 .header{background-color:#C7E8C9;padding:50px 20px;text-align:center;}
-.header h1{margin:0;font-size:2.4em;color:#2F5D4E;}
+.header h1{
+    margin:0;
+    font-size:2.4em;
+    color:#2F5D4E;
+    font-family:"Hiragino Maru Gothic Pro","Arial Rounded MT Bold","Helvetica",sans-serif;
+    font-weight:normal;
+    letter-spacing:0.05em;
+    text-shadow:1px 1px 2px rgba(0,0,0,0.1);
+}
 .header p{font-size:1.1em;color:#3E6B57;}
 .section{padding:50px 20px;}
 .section h2{text-align:center;margin-bottom:30px;color:#2F5D4E;}
